prevent images from overflowing sections in blog entries

--- a/src/components/blog/entry.scss
+++ b/src/components/blog/entry.scss
@@ -23,6 +23,7 @@ h2 {
 h3 {
   margin: 30px 0 10px 0;
   font-size: 18px;
+  clear: both;
 }
 
 h4 {
